Updated licensing information. Added BSD License to root directory and to all source files.

--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -1,4 +1,4 @@
-/**
+<!--
 
 Copyright (c) 2011 Pierce Moore, RefreshedWeb.com, and NerdTraining.info
 All rights reserved.
@@ -10,30 +10,14 @@ Redistributions in binary form must reproduce the above copyright notice, this l
 Neither the names of Pierce Moore, RefreshedWeb.com, NerdTraining.info,  nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-**/
+-->
 
-{
-
-	"name":	"Bad Ass New Tab Page",
-	"version": "0.1",
-	"description": "I got tired of Chrome's ugly new tab page, so this is an attempt to fix it and make it more useful. In line for development are custom links, a small task manager, and a built-in alarm clock.",
-	"browser_action": {
-		"default_icon": "img/icon_19.png",
-		"default_title": "Bad Ass New Tab Page",
-		"default_popup": "tabPageFiles/popup.html"
-	},
-	"icons": {
-		"16": "img/icon_16.png",
-		"48": "img/icon_48.png",
-		"128": "img/icon_128.png"
-	},
-	"options_page": "tabPageFiles/options.html",
-	"chrome_url_overrides": {
-		"newtab": "tabPageFiles/ClockAndLinks/index.htm"
-	},
-	"permissions": [
-		"tabs",
-		"notifications"
-	]
-
-}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+		<title>Untitled Document</title>
+	</head>
+	<body>
+	</body>
+</html>
