First official version 0.1.2, submitted to Google Chrome App Gallery. Added several new links for new users, modified manifest, added analytics for BANTP analytics account, and more.

--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -16,8 +16,22 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-		<title>Untitled Document</title>
+		<title>Bad Ass New Tab Page :: Background Page</title>
 	</head>
 	<body>
+		
+   <script>
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-21684633-1']);
+     _gaq.push(['_trackPageview']);
+
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = 'https://ssl.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
+		
+		
 	</body>
 </html>
