--- a/tabPageFiles/options.html
+++ b/tabPageFiles/options.html
@@ -22,6 +22,19 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		
 	</head>
 	<body>
+		<br /><br /><br /><br /><br />
+		<h1 style="font-family:Aller,Tahoma,sans-serif;text-shadow:0px 0px 4px #000000;color:#eeeeee;">In the next update, this page will start to fill up with all the things you can configure. Right now, though, I just wanted to get you guys the core functionality of the New Tab Page beauty going. Enjoy, and stay tuned!</h1>
 		
+   <script>
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-21684633-1']);
+     _gaq.push(['_trackPageview']);
+
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = 'https://ssl.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
 	</body>
 </html>
