--- a/tabPageFiles/popup.html
+++ b/tabPageFiles/popup.html
@@ -93,6 +93,11 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 			</div>	
 			
 			<div class="clear"></div>
+			<div style="line-height:20px;">
+				<h2>An extension built by and for people who are sick of Chrome's ugly, useless default page.</h2>
+				<h2 style="color:#eeeeee;text-shadow:0px 0px 4px #000000;">In the next update, there will be controls here to interact more fully with the New Tab page, so don't delete this icon!</h2>
+			</div>
+			<!--
 			<div>
 				<a href="#" id="addSiteButton">Add Site to New Tab Page</a>
 			</div>
@@ -108,10 +113,24 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				<h2>Alarm Clock: <span id="ls_alarmActive">Unavailable</span></h2>
 				<h2>Task Manager: <span id="ls_taskActive">Unavailable</span></h2>
 			</div>
+			-->
 			<div>
 				<h3>This extension was designed and built by Pierce Moore of Refreshed Web Design. Copyright &copy; 2011 </h3>
 				
 			</div>
 		</div>
+		
+		
+   <script>
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-21684633-1']);
+     _gaq.push(['_trackPageview']);
+
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = 'https://ssl.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
 	</body>
 </html>
