--- a/tabPageFiles/ClockAndLinks/index.htm
+++ b/tabPageFiles/ClockAndLinks/index.htm
@@ -29,7 +29,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				displayLinks();		
 				updateTime();
 				var clock = window.setInterval(updateTime,1000);
-				$('a[href^="http://"]').attr({target: "_blank",title: "Opens in a new window"});	
+				//$('a[href^="http://"]').attr({target: "_blank",title: "Opens in a new window"});	
 					
 			});
 			
@@ -55,9 +55,12 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 			<span id="linkStart"></span>
 			
 			<div style="clear:both"><br /></div>
+			<!--
 			<a href="steam:"><h2>Open Steam</h2></a>
 			<a href="itunes:///"><h2>Open iTunes</h2></a>
-			
+			-->
+			<a href="http://www.refreshedweb.com/projects/newtab/"><h2>BANTP Home Page</h2></a>
+			<a href="mailto://pierce@refreshedweb.com"><h2>Email the Developer</h2></a>
 		</div>
 		
 		<script type="text/javascript">
