Security commit: NON-WORKING VERSION. Many changes and improvements, but must move all localStorage code to the background page. Sleep time. I say again, THIS IS NOT A WORKING VERSION! That is all :)

--- a/tabPageFiles/ClockAndLinks/index.htm
+++ b/tabPageFiles/ClockAndLinks/index.htm
@@ -73,5 +73,11 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 			//notification.show();
 		</script>
 		<br /><br /><br />
+		
+		<div id="bossiBug">
+			<a href="http://www.flickr.com/photos/thisisbossi" target="_blank">
+				<img src="img/thisisbossi.png" alt="Check out Bossi's Photostream" title="Check out Bossi's Photostream" />
+			</a>
+		</div>
 	</body>
 </html>
