--- a/tabPageFiles/ClockAndLinks/index.htm
+++ b/tabPageFiles/ClockAndLinks/index.htm
@@ -20,16 +20,37 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript">
-		
+			function bg() {
+				return chrome.extension.getBackgroundPage();
+			}
 			
-			$(document).ready(function () {
-				function bg() {
-					return chrome.extension.getBackgroundPage();
+			function displayLinks() {
+				var linkOutput = bg().buildLinks();
+				$(linkOutput).appendTo("#linkStart");
+			}	
+			function updateTime() {
+				var today = new Date();
+				var hour = today.getHours();
+				var min = today.getMinutes();
+				var sec = today.getSeconds();
+				if( hour < 10) {
+					hour = "0" + hour;
 				}
-				console.log(bg());
-				bg().displayLinks();		
-				bg().updateTime();
-				bg().updateTime();
+				if( min < 10) {
+					min = "0" + min;
+				}
+				if(sec < 10) {
+					sec = "0" + sec;
+				}
+				document.getElementById("time").innerHTML = hour + ":" + min + ":" + sec;
+				var day = today.toDateString();
+				document.getElementById("date").innerHTML = day;
+			}
+			console.log('initializing...');
+			bg().init();		
+			$(document).ready(function () {
+				updateTime();
+				displayLinks();
 				var clock = window.setInterval(updateTime,1000);
 				//$('a[href^="http://"]').attr({target: "_blank",title: "Opens in a new window"});	
 					
