--- a/tabPageFiles/popup.html
+++ b/tabPageFiles/popup.html
@@ -16,7 +16,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-		<title>Popup!</title>
+		<title>Bad Ass New Tab Page : Popup</title>
 		<style>
 			* {
 				font-family: "Segoe UI", sans-serif;
