Working version, user is now able to add new links to the new tab page from the icon in the top right bar. Tomorrow will bring the ability to delete and modify links. Then, we package it up as v0.2 and release it into the wild of the Chrome App Gallery :)

--- a/tabPageFiles/ClockAndLinks/index.htm
+++ b/tabPageFiles/ClockAndLinks/index.htm
@@ -47,13 +47,12 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				document.getElementById("date").innerHTML = day;
 			}
 			console.log('initializing...');
-			bg().init();		
 			$(document).ready(function () {
 				updateTime();
 				displayLinks();
 				var clock = window.setInterval(updateTime,1000);
 				//$('a[href^="http://"]').attr({target: "_blank",title: "Opens in a new window"});	
-					
+				alert(bg().sendObj());
 			});
 			
 		</script>
